--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="modal"></div>
     <div id="root"></div>
   </body>
 </html>
