added SignUp component and fix Navbar

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
     <title>React App</title>
   </head>
   <body>
-    <div id="modal"></div>
+    <div id="modal" class="relative font-sans"></div>
     <div id="root"></div>
   </body>
 </html>
